Added all front page menu buttons

--- a/index.html
+++ b/index.html
@@ -42,59 +42,22 @@
 <a page-href="#Septic_Tank_Effluent_Filter_Requirements" data-role="button" >Septic Tank Effluent Filter Requirements</a>
 <a page-href="#Re-classify_the_Effluent_From_Treatment_Units" data-role="button" >Re-classify the Effluent From Treatment Units</a>
 <a page-href="#Industry_Standard_for_Certifying_Treatment_Technologies" data-role="button" >Industry Standard for Certifying Treatment Technologies</a>
+<a page-href="#Information_Required_for_Treatment_Unit_Operator" data-role="button" >Information Required for Treatment Unit Operator</a>
+<a page-href="#Design_and_Installation_of_a_Shallow_Buried_Trench" data-role="button" >Design and Installation of a Shallow Buried Trench</a>
 
-<a page-href="#Renovation" data-role="button" >Renovation</a>
+<a page-href="#Detection_of_Distribution_Pipes Within_Leaching_Beds" data-role="button" >Detection of Distribution Pipes Within Leaching Beds</a>
+<a page-href="#Requirements_Related_to_the_Type_of_the_Absorption_Trenches" data-role="button" >Requirements Related to the Type of the Absorption Trenches</a>
+<a page-href="#Restructured_for_Filter_Beds_With_Treatment_Unit_Classification" data-role="button" >Restructured for Filter Beds With Treatment Unit Classification</a>
+<a page-href="#Loading_Requirements_With_Treatment_Unit_Classification" data-role="button" >Loading Requirements With Treatment Unit Classification</a>
+<a page-href="#Treatment_Unit_Used_With_Shallow_Buried_Trench" data-role="button" >Treatment Unit Used With Shallow Buried Trench</a>
+<a page-href="#Requirements_for_Type_A_Dispersal_Bed_Introduced" data-role="button" >Requirements for Type A Dispersal Bed Introduced</a>
+<a page-href="#Requirements_for_Type_B_Dispersal_Bed_Introduced" data-role="button" >Requirements for Type B Dispersal Bed Introduced</a>
+<a page-href="#Sampling_Requirements_to_Include_New_Dispersal_Beds" data-role="button" >Sampling Requirements to Include New Dispersal Beds</a>
+<a page-href="#Clarifies_the_Use_of_the_Grab_Sample_in_Measuring_Compliance" data-role="button" >Clarifies the Use of the Grab Sample in Measuring Compliance</a>
+<a page-href="#Requirement_for_Re-sampling_From_Failing_Treatment_Units" data-role="button" >Requirement for Re-sampling From Failing Treatment Units</a>
+<a page-href="#Requirements_for_Maintenance_of_Grease_Interceptors" data-role="button" >Requirements for Maintenance of Grease Interceptors</a>
+<a page-href="#Requirements_for_Pressure_Head_in_a_Pressurized_Distribution_System" data-role="button" >Requirements for Pressure Head in a Pressurized Distribution System</a>
 		</div>
-
-Information required for treatment unit operator
-
-[SECTION] OBC - Division B 8.7.1.2.(1)     				
-Design and installation of a shallow buried trench
-
-[SECTION] OBC - Division B 8.7.2.2.(2)   				
-Detection of distribution pipes within leaching beds
-
-[SECTION] OBC - Division B 8.7.4.2.(1)  					
-Requirements related to the type of the absorption trenches 
-
-[SECTION] OBC - Division B 8.7.5.1.(1)  				
-Restructured for filter beds with treatment unit classification
-
-
-[SECTION] OBC - Division B 8.7.5.2.(5)   				
-Loading requirements with treatment unit classification
-
-[SECTION] OBC - Division B 8.7.6.1.(1)  				
-Treatment unit used with shallow buried trench
-
-[SECTION] OBC - Division B 8.7.7.1.  					
-Requirements for Type A dispersal bed introduced
-
-[SECTION] OBC - Division B 8.7.8.1					
-Requirements for Type B dispersal bed introduced.
-
-[SECTION] OBC - Division B 8.9.2.4.(1)					
-Sampling requirements to include new dispersal beds
-  
-[SECTION] OBC - Division B 8.9.2.4.(3)  				
-Clarifies the use of the grab sample in measuring compliance
-
-[SECTION] OBC - Division B 8.9.2.4.(4)  				
-Requirement for re-sampling from failing treatment units 
-
-[SECTION]OBC - Division B 8.9.3.3.(1)    				
-Requirements for maintenance of grease interceptors 
-
-[SECTION] OBC - Division B 8.9.3.5.(1)  				
-Requirements for pressure head in a pressurized distribution system.
-
-
-
-
-
-
-
-
 		<br>
 		<center>OWW – Onsite Wastewater 
 <br>Ontario Building Code Reference Guide
