Added page placeholders - changed case of menu items

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 	<script type="text/javascript" src="cordova.js" ></script> 
 	<script src="js/jquery.mobile-1.2.0.min.js"></script>
 	<script src="js/pcchu.js"></script>
-	<title>OBC Part 8</title>
+	<title>OWW - NEW OBC 2012 - Part 8 Changes</title>
 </head>
 <body>
 	<div data-role="page" data-theme="b"  id="start" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
-			<h1>OBC Part 8</h1>
+			<h1>OBC Part 8 Changes</h1>
 		</div><!-- /header -->
 		<div data-role="content" >
 		<br>
-		<center><img src="img/OWWApplogo.jpg"><h2>OWW – Onsite Wastewater Reference Guide<h2>Part 8 Sewage Systems<br></center>
+		<center><img src="img/OWWApplogo.jpg"><h2>New Ontario Building Code<h2>Part 8: Changes<br></center>
 		
 		</div><!-- /content -->
 	</div><!--  /page -->
@@ -35,37 +35,36 @@
 		<div data-role="controlgroup">
 
 <a page-href="#Introduction" data-role="button" >Introduction</a>
-<a page-href="#Review_of_Onsite_Wastewater_Definitions" data-role="button" >Review of Onsite Wastewater Definitions</a>
-<a page-href="#Reference_Standards_for_Grease_Interceptors" data-role="button" >Reference Standards for Grease Interceptors</a>
-<a page-href="#Grease_Interceptor_Requirements" data-role="button" >Grease Interceptor Requirements</a>
-<a page-href="#Revised_to_Include_the_Use_of_the_Soil_Texture_Classifications" data-role="button" >Revised to Include the Use of the Soil Texture Classifications</a>
-<a page-href="#Septic_Tank_Effluent_Filter_Requirements" data-role="button" >Septic Tank Effluent Filter Requirements</a>
-<a page-href="#Re-classify_the_Effluent_From_Treatment_Units" data-role="button" >Re-classify the Effluent From Treatment Units</a>
-<a page-href="#Industry_Standard_for_Certifying_Treatment_Technologies" data-role="button" >Industry Standard for Certifying Treatment Technologies</a>
-<a page-href="#Information_Required_for_Treatment_Unit_Operator" data-role="button" >Information Required for Treatment Unit Operator</a>
-<a page-href="#Design_and_Installation_of_a_Shallow_Buried_Trench" data-role="button" >Design and Installation of a Shallow Buried Trench</a>
-
-<a page-href="#Detection_of_Distribution_Pipes Within_Leaching_Beds" data-role="button" >Detection of Distribution Pipes Within Leaching Beds</a>
-<a page-href="#Requirements_Related_to_the_Type_of_the_Absorption_Trenches" data-role="button" >Requirements Related to the Type of the Absorption Trenches</a>
-<a page-href="#Restructured_for_Filter_Beds_With_Treatment_Unit_Classification" data-role="button" >Restructured for Filter Beds With Treatment Unit Classification</a>
-<a page-href="#Loading_Requirements_With_Treatment_Unit_Classification" data-role="button" >Loading Requirements With Treatment Unit Classification</a>
-<a page-href="#Treatment_Unit_Used_With_Shallow_Buried_Trench" data-role="button" >Treatment Unit Used With Shallow Buried Trench</a>
-<a page-href="#Requirements_for_Type_A_Dispersal_Bed_Introduced" data-role="button" >Requirements for Type A Dispersal Bed Introduced</a>
-<a page-href="#Requirements_for_Type_B_Dispersal_Bed_Introduced" data-role="button" >Requirements for Type B Dispersal Bed Introduced</a>
-<a page-href="#Sampling_Requirements_to_Include_New_Dispersal_Beds" data-role="button" >Sampling Requirements to Include New Dispersal Beds</a>
-<a page-href="#Clarifies_the_Use_of_the_Grab_Sample_in_Measuring_Compliance" data-role="button" >Clarifies the Use of the Grab Sample in Measuring Compliance</a>
-<a page-href="#Requirement_for_Re-sampling_From_Failing_Treatment_Units" data-role="button" >Requirement for Re-sampling From Failing Treatment Units</a>
-<a page-href="#Requirements_for_Maintenance_of_Grease_Interceptors" data-role="button" >Requirements for Maintenance of Grease Interceptors</a>
-<a page-href="#Requirements_for_Pressure_Head_in_a_Pressurized_Distribution_System" data-role="button" >Requirements for Pressure Head in a Pressurized Distribution System</a>
+<a page-href="#Review_of_onsite_wastewater_definitions" data-role="button" >Review of onsite wastewater definitions</a>
+<a page-href="#Reference_standards_for_grease_interceptors" data-role="button" >Reference standards for grease interceptors</a>
+<a page-href="#Grease_interceptor_requirements" data-role="button" >Grease interceptor requirements</a>
+<a page-href="#Revised_to_include_the_use_of_the_soil_texture_classifications" data-role="button" >Revised to include the use of the soil texture classifications</a>
+<a page-href="#Septic_tank_effluent_filter_requirements" data-role="button" >Septic tank effluent filter requirements<
+<a page-href="#Reclassify_the_effluent_from_treatment_units" data-role="button" >Re-classify the effluent from treatment units</a>
+<a page-href="#Industry_standard_for_certifying_treatment_technologies" data-role="button" >Industry standard for certifying treatment technologies</a>
+<a page-href="#Information_required_for_treatment_unit_operator" data-role="button" >Information required for treatment unit operator</a>
+<a page-href="#Design_and_installation_of_a_shallow_buried_trench" data-role="button" >Design and installation of a shallow buried trench</a>
+<a page-href="#Detection_of_distribution_pipes_within_leaching_beds" data-role="button" >Detection of distribution pipes within leaching beds</a>
+<a page-href="#Requirements_related_to_the_type_of_the_absorption_trenches" data-role="button" >Requirements related to the type of the absorption trenches</a>
+<a page-href="#Restructured_for_filter_beds_with_treatment_unit_classification" data-role="button" >Restructured for filter beds with treatment unit classification</a>
+<a page-href="#Loading_requirements_with_treatment_unit_classification" data-role="button" >Loading requirements with treatment unit classification</a>
+<a page-href="#Treatment_unit_used_with_shallow_buried_trench" data-role="button" >Treatment unit used with shallow buried trench</a>
+<a page-href="#Requirements_for_type_a_dispersal_bed_introduced" data-role="button" >Requirements for Type A dispersal bed introduced</a>
+<a page-href="#Requirements_for_type_b_dispersal_bed_introduced" data-role="button" >Requirements for Type B dispersal bed introduced</a>
+<a page-href="#Sampling_requirements_to_include_new_dispersal_beds" data-role="button" >Sampling requirements to include new dispersal beds</a>
+<a page-href="#Clarifies_the_use_of_the_grab_sample_in_measuring_compliance" data-role="button" >Clarifies the use of the grab sample in measuring compliance</a>
+<a page-href="#Requirement_for_resampling_from_failing_treatment_units" data-role="button" >Requirement for re-sampling from failing treatment units</a>
+<a page-href="#Requirements_for_maintenance_of_grease_interceptors" data-role="button" >Requirements for maintenance of grease interceptors</a>
+<a page-href="#Requirements_for_pressure_head_in_a_pressurized_Distribution_System" data-role="button" >Requirements for pressure head in a pressurized distribution system</a>
 		</div>
 		<br>
 		<center>OWW – Onsite Wastewater 
-<br>Ontario Building Code Reference Guide
-<br>Part 8 Sewage Systems
+<br>New Ontario Building Code
+<br>Part 8: Changes
 </center>
 		<br>
 		<br>
-		<center><small>Version 0.0.4</small></center>
+		<center><small>Version 1.2</small></center>
 		</div><!-- /content -->
 	</div><!--  /page -->
     <div data-role="page" data-theme="b"  id="Introduction" >
@@ -75,61 +74,30 @@
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Powers_of_Inspection_and_Enforcement" >
+	
+    <div data-role="page" data-theme="b"  id="Review_of_onsite_wastewater_definitions" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
 			<h1>OWW</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="generalonsite" >
+	
+    <div data-role="page" data-theme="b"  id="Reference_standards_for_grease_interceptors" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
 			<h1>OWW</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Site_Evaluation_and_soil_assessment" >
+	
+    <div data-role="page" data-theme="b"  id="Grease_interceptor_requirements" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
 			<h1>OWW</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Design_flows" >
-		<div data-role="header" data-theme="e"  data-position="fixed">
-			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
-		</div><!-- /header -->
-		<div data-role="content" ></div>
-	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Tank_and_treatment_units" >
-		<div data-role="header" data-theme="e"  data-position="fixed">
-			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
-		</div><!-- /header -->
-		<div data-role="content" ></div>
-	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Distribution" >
-		<div data-role="header" data-theme="e"  data-position="fixed">
-			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
-		</div><!-- /header -->
-		<div data-role="content" ></div>
-	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Operation_and_maintenance" >
-		<div data-role="header" data-theme="e"  data-position="fixed">
-			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
-		</div><!-- /header -->
-		<div data-role="content" ></div>
-	</div><!-- /page -->
-    <div data-role="page" data-theme="b"  id="Renovation" >
-		<div data-role="header" data-theme="e"  data-position="fixed">
-			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
-		</div><!-- /header -->
-		<div data-role="content" ></div>
-	</div><!-- /page -->
+	
 </body>
 </html>
