Added miss </a> to menu list html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a page-href="#Reference_standards_for_grease_interceptors" data-role="button" >Reference standards for grease interceptors</a>
 <a page-href="#Grease_interceptor_requirements" data-role="button" >Grease interceptor requirements</a>
 <a page-href="#Revised_to_include_the_use_of_the_soil_texture_classifications" data-role="button" >Revised to include the use of the soil texture classifications</a>
-<a page-href="#Septic_tank_effluent_filter_requirements" data-role="button" >Septic tank effluent filter requirements<
+<a page-href="#Septic_tank_effluent_filter_requirements" data-role="button" >Septic tank effluent filter requirements</a>
 <a page-href="#Reclassify_the_effluent_from_treatment_units" data-role="button" >Re-classify the effluent from treatment units</a>
 <a page-href="#Industry_standard_for_certifying_treatment_technologies" data-role="button" >Industry standard for certifying treatment technologies</a>
 <a page-href="#Information_required_for_treatment_unit_operator" data-role="button" >Information required for treatment unit operator</a>
