Renamed to "OBC New Code Changes Pt. 8"

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	<script type="text/javascript" src="cordova.js" ></script> 
 	<script src="js/jquery.mobile-1.2.0.min.js"></script>
 	<script src="js/pcchu.js"></script>
-	<title>OWW - NEW OBC 2012 - Part 8 Changes</title>
+	<title>OWW - OBC New Code Changes Pt. 8</title>
 </head>
 <body>
 	<div data-role="page" data-theme="b"  id="start" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
-			<h1>OBC Part 8 Changes</h1>
+			<h1>OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" >
 		<br>
-		<center><img src="img/OWWApplogo.jpg"><h2>New Ontario Building Code<h2>Part 8: Changes<br></center>
+		<center><img src="img/OWWApplogo.jpg"><h2>New Ontario Building Code<h2>Changes Pt. 8<br></center>
 		
 		</div><!-- /content -->
 	</div><!--  /page -->
 	<div data-role="page" data-theme="b"  id="main" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" >
 		<div data-role="controlgroup">
@@ -52,7 +52,7 @@
 <a page-href="#Treatment_unit_used_with_shallow_buried_trench" data-role="button" >Treatment unit used with shallow buried trench</a>
 <a page-href="#Requirements_for_type_a_dispersal_bed_introduced" data-role="button" >Requirements for Type A dispersal bed introduced</a>
 <a page-href="#Requirements_for_type_b_dispersal_bed_introduced" data-role="button" >Requirements for Type B dispersal bed introduced</a>
-<a page-href="#Sampling_requirements_to_include_new_dispersal_beds" data-role="button" >Sampling requirements to include new dispersal beds</a>
+<a page-href="#Sampling_requirements_to_include_new_dispersal_bed" data-role="button" >Sampling requirements to include new dispersal beds</a>
 <a page-href="#Clarifies_the_use_of_the_grab_sample_in_measuring_compliance" data-role="button" >Clarifies the use of the grab sample in measuring compliance</a>
 <a page-href="#Requirement_for_resampling_from_failing_treatment_units" data-role="button" >Requirement for re-sampling from failing treatment units</a>
 <a page-href="#Requirements_for_maintenance_of_grease_interceptors" data-role="button" >Requirements for maintenance of grease interceptors</a>
@@ -60,8 +60,8 @@
 		</div>
 		<br>
 		<center>OWW – Onsite Wastewater 
-<br>New Ontario Building Code
-<br>Part 8: Changes
+<br>OBC New Code
+<br>Changes Pt. 8
 </center>
 		<br>
 		<br>
@@ -71,7 +71,7 @@
     <div data-role="page" data-theme="b"  id="Introduction" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -79,7 +79,7 @@
     <div data-role="page" data-theme="b"  id="Review_of_onsite_wastewater_definitions" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -87,7 +87,7 @@
     <div data-role="page" data-theme="b"  id="Reference_standards_for_grease_interceptors" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -95,7 +95,7 @@
     <div data-role="page" data-theme="b"  id="Grease_interceptor_requirements" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -103,7 +103,7 @@
     <div data-role="page" data-theme="b"  id="Revised_to_include_the_use_of_the_soil_texture_classifications" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -111,7 +111,7 @@
     <div data-role="page" data-theme="b"  id="Septic_tank_effluent_filter_requirements" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -119,7 +119,7 @@
     <div data-role="page" data-theme="b"  id="Reclassify_the_effluent_from_treatment_units" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -127,7 +127,7 @@
     <div data-role="page" data-theme="b"  id="Industry_standard_for_certifying_treatment_technologies" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -135,7 +135,7 @@
     <div data-role="page" data-theme="b"  id="Information_required_for_treatment_unit_operator" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -143,7 +143,7 @@
     <div data-role="page" data-theme="b"  id="Design_and_installation_of_a_shallow_buried_trench" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -151,7 +151,7 @@
     <div data-role="page" data-theme="b"  id="Detection_of_distribution_pipes_within_leaching_beds" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -159,7 +159,7 @@
     <div data-role="page" data-theme="b"  id="Requirements_related_to_the_type_of_the_absorption_trenches" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -167,7 +167,7 @@
     <div data-role="page" data-theme="b"  id="Restructured_for_filter_beds_with_treatment_unit_classification" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -175,7 +175,7 @@
     <div data-role="page" data-theme="b"  id="Loading_requirements_with_treatment_unit_classification" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -183,7 +183,7 @@
     <div data-role="page" data-theme="b"  id="Treatment_unit_used_with_shallow_buried_trench" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -191,7 +191,7 @@
     <div data-role="page" data-theme="b"  id="Requirements_for_type_a_dispersal_bed_introduced" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -199,7 +199,7 @@
     <div data-role="page" data-theme="b"  id="Requirements_for_type_b_dispersal_bed_introduced" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -207,7 +207,7 @@
     <div data-role="page" data-theme="b"  id="Sampling_requirements_to_include_new_dispersal_beds" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->
@@ -215,7 +215,7 @@
     <div data-role="page" data-theme="b"  id="Clarifies_the_use_of_the_grab_sample_in_measuring_compliance" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->		
@@ -223,7 +223,7 @@
     <div data-role="page" data-theme="b"  id="Requirement_for_resampling_from_failing_treatment_units" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->		
@@ -231,7 +231,7 @@
     <div data-role="page" data-theme="b"  id="Requirements_for_maintenance_of_grease_interceptors" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->		
@@ -239,7 +239,7 @@
     <div data-role="page" data-theme="b"  id="Requirements_for_pressure_head_in_a_pressurized_Distribution_System" >
 		<div data-role="header" data-theme="e"  data-position="fixed">
 			<a href="#main" data-role="button" data-shadow="false" data-icon="back" data-iconpos="left" >Back</a> 
-			<h1>OWW</h1>
+			<h1>OWW - OBC New Code Changes Pt. 8</h1>
 		</div><!-- /header -->
 		<div data-role="content" ></div>
 	</div><!-- /page -->				
